# connectedhomeip

./: BUILD.gn  CMakeLists.txt  PreLoad.cmake
config/python/: CHIPProjectConfig.h
docs/: BUILDING_CMAKE.md
examples/shell/shell_common/: cmd_server.cpp
scripts/: codegen.py
scripts/py_matter_idl/: files.gni
scripts/py_matter_idl/examples/: README.md
scripts/py_matter_idl/examples/matter_idl_plugin/: __init__.py  matter_cluster_proto.jinja
scripts/py_matter_idl/matter_idl/generators/: registry.py
scripts/py_matter_idl/matter_idl/generators/custom/: __init__.py  matter_cluster_proto.jinja
scripts/tests/: run_python_test.py
src/app/: AttributeAccessInterface.h  BUILD.gn  CMakeLists.txt
src/app/server/: CommissioningWindowManager.cpp  CommissioningWindowManager.h  Server.cpp  Server.h
src/app/tests/suites/certification/: Test_TC_SC_4_5.yaml
src/app/util/: attribute-metadata.h  attribute-storage.cpp
src/ble/: CMakeLists.txt
src/ble/tests/: CMakeLists.txt
src/controller/: CHIPDeviceController.cpp  CHIPDeviceControllerFactory.cpp  CHIPDeviceControllerFactory.h  CHIPDeviceControllerSystemState.h
src/controller/python/: BUILD.gn  ChipDeviceController-ScriptBinding.cpp  build-chip-wheel.py
src/controller/python/chip/: ChipDeviceCtrl.py
src/controller/python/chip/clusters/: Objects.py
src/controller/python/chip/dynamic_server/: AfTypes.py  Server.cpp  Server.py  af_types.py
src/controller/python/data-model/: BUILD.gn
src/crypto/: CHIPCryptoPAL.cpp  CHIPCryptoPAL.h
src/include/platform/: ThreadStackManager.h
src/inet/: CMakeLists.txt
src/inet/tests/: CMakeLists.txt
src/lib/core/: CMakeLists.txt
src/lib/core/tests/: CMakeLists.txt
src/lib/dnssd/: Advertiser_ImplMinimalMdns.cpp  Discovery_ImplPlatform.cpp  Resolver.h
src/lib/dnssd/tests/: TestTxtFields.cpp
src/lib/shell/: CMakeLists.txt
src/lib/shell/tests/: CMakeLists.txt
src/lib/support/: CMakeLists.txt
src/lib/support/logging/: CHIPLogging.cpp  CHIPLogging.h
src/lib/support/tests/: CMakeLists.txt
src/messaging/: ExchangeMgr.cpp
src/platform/: BUILD.gn  device.gni
src/platform/Linux/: BUILD.gn  CHIPDevicePlatformConfig.h  Logging.cpp  ThreadStackManagerImpl.cpp
src/protocols/secure_channel/: PASESession.cpp
src/protocols/secure_channel/tests/: TestCASESession.cpp
src/protocols/user_directed_commissioning/: UserDirectedCommissioningServer.cpp
src/protocols/user_directed_commissioning/tests/: TestUdcMessages.cpp
src/setup_payload/: CMakeLists.txt
src/setup_payload/tests/: CMakeLists.txt
src/system/: CMakeLists.txt
src/system/tests/: CMakeLists.txt
src/transport/: CMakeLists.txt  CryptoContext.cpp  SecureMessageCodec.cpp  SecureMessageCodec.h  SecureSession.cpp  SecureSessionMgr.cpp  SessionManager.cpp
src/transport/raw/: MessageHeader.cpp  MessageHeader.h  UDP.cpp
src/transport/raw/tests/: TestMessageHeader.cpp
src/transport/tests/: CMakeLists.txt
